hphp/hack/test/extended_reasons/vector_invariant_2.php.diff.exp
--- control

+++ test

@@ -1,7 +1,7 @@

 error: Typing[4110] Invalid argument [1]
 -> Expected A [2]
--> This type argument to Vector must match exactly (it is invariant) [2]
 -> But got ?A [3]
+-> This type argument to Vector must match exactly (it is invariant) [3]
 
 hphp/hack/test/extended_reasons/vector_invariant_2.php:6:6
     1 | <?hh
@@ -15,8 +15,8 @@

 
 error: Typing[4110] Invalid return type [1]
 -> Expected ~A [2]
--> This type argument to Vector must match exactly (it is invariant) [2]
 -> But got ?A [3]
+-> This type argument to Vector must match exactly (it is invariant) [3]
 
 hphp/hack/test/extended_reasons/vector_invariant_2.php:7:9
       3 | function bar(Vector<A> $x): void {}